syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Andrem19/bundle_go_grpc_api/pb";

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserRsponse {
    User user =1;
    string session_id =2;
    string access_token = 3;
    google.protobuf.Timestamp token_expires_at = 6;
}